# Juego

./: .gitignore  BUG_ANALYSIS_DETAILED.md  BUG_FIXES_GUIDE.md  BUG_SUMMARY.md  CHANGELOG.md  CMakeLists.txt  CODEBASE_ANALYSIS.md  INDEX.md  README.md  TODO.md  app_services.cpp  app_services.h  build.bat  career_save.txt  gui.cpp  gui.h  io.cpp  io.h  main.cpp  models.cpp  models.h  scrape_transfermarkt.py  simulation.cpp  simulation.h  tmp_cli_input.txt  tmp_cli_output.txt  ui.cpp  ui.h  utils.cpp  utils.h  validators.cpp  validators.h
.github/workflows/: windows-build.yml
LigaChilena/: Barnechea.txt  Cobreloa.txt  Cobresal.txt  Colo-Colo.txt  Deportes_Copiapo.txt  Deportes_Linares.txt  Deportes_Melipilla.txt  Deportes_Puerto_Montt.txt  Deportes_Rengo.txt  Deportes_Santa_Cruz.txt  Deportes_Temuco.txt  Deportes_Valdivia.txt  Everton.txt  Huachipato.txt  Nublense.txt  PrimeraB_teams.txt  San_Antonio_Unido.txt  SegundaDivision_teams.txt  Union_Espanola.txt  Universidad_Catolica.txt  Universidad_de_Chile.txt  teams.txt
LigaChilena/primera_b/: Audax_Italiano.txt  Deportes_Antofagasta.txt  Deportes_Concepcion.txt  Deportes_Copiapo.txt  Deportes_La_Serena.txt  Magallanes.txt  PrimeraB_teams.txt  Rangers.txt  San_Luis.txt  Santiago_Morning.txt  Union_San_Felipe.txt
LigaChilena/primera_division/: Cobresal.txt  Curico_Unido.txt  Everton.txt  Nublense.txt  O'Higgins.txt  Palestino.txt  Union_Espanola.txt  Union_La_Calera.txt  Universidad_de_Chile.txt  teams.txt
LigaChilena/segunda division/: teams.txt
LigaChilena/segunda_division/: Deportes_Colina.txt  Deportes_Iberia.txt  Deportes_Recoleta.txt  Deportes_Vallenar.txt  Fernandez_Vial.txt  Iberia.txt  Provincial_Osorno.txt  SegundaDivision_teams.txt  Trasandino.txt
LigaChilena/tercera division a/: teams.txt
LigaChilena/tercera division b/: teams.txt
LigaChilena/tercera_division_a/: Deportivo_Tercera_A1.txt  Deportivo_Tercera_A2.txt  teams.txt
LigaChilena/tercera_division_b/: Deportivo_Tercera_B1.txt  teams.txt
assets/audio/: README.md  menu_themes.csv
data/: leagues.json  players.json  teams.json
data/LigaChilena/: competition_rules.csv
data/configs/: duplicate_player_whitelist.csv  ignored_team_folders.csv  league_registry.csv  scouting_regions.csv  world_rules.csv
docs/: ARCHITECTURE.md  ROADMAP.md  data_cleanup_report.md
include/: app_services.h  competition.h  gui.h  models.h  simulation.h  validators.h
include/ai/: ai_match_manager.h  ai_squad_planner.h  ai_transfer_manager.h  team_ai.h
include/career/: analytics_service.h  app_services.h  career_manager.h  career_modules.h  career_reports.h  career_runtime.h  career_service.h  career_state.h  career_support.h  dressing_room_service.h  game_events_system.h  gameplay_reports.h  inbox_service.h  manager_advice.h  match_analysis_store.h  match_center_service.h  medical_service.h  player_development.h  season_flow_controller.h  season_service.h  season_transition.h  staff_service.h  sub_services.h  team_management.h  transfer_briefing.h  week_simulation.h  weekly_focus_service.h  world_state_service.h
include/competition/: competition.h  league_registry.h
include/development/: monthly_development.h  player_progression_system.h  training_impact_system.h  youth_generation_system.h
include/engine/: debt_system.h  facilities_system.h  front_menu.h  game_controller.h  game_engine.h  game_settings.h  manager_stress.h  models.h  rival_ai.h  rivalry_system.h  social_system.h  team_personality.h
include/finance/: finance_system.h
include/gui/: gui.h  gui_audio.h  gui_internal.h  gui_view_builders.h
include/io/: io.h  save_manager.h  save_serialization.h
include/simulation/: fatigue_engine.h  match_context.h  match_engine.h  match_engine_internal.h  match_event_generator.h  match_event_resolver.h  match_phase.h  match_postprocess.h  match_report.h  match_resolution.h  match_stats.h  match_types.h  morale_engine.h  player_condition.h  simulation.h  tactics_engine.h
include/transfers/: negotiation_system.h  transfer_market.h  transfer_types.h
include/ui/: career_reports_ui.h  context_menu.h  economy_fairplay.h  global_search.h  keyboard_shortcuts.h  team_ui.h  ui.h
include/utils/: career_safety.h  event_system.h  localization.h  logger.h  safe_references.h  utils.h
include/validators/: validators.h
proceso de instalacion MinGW/: install_mingw_instructions.txt  proceso_instalacion.txt  pruebas.txt
src/: main.cpp  winmain.cpp
src/ai/: ai_match_manager.cpp  ai_squad_planner.cpp  ai_transfer_manager.cpp  team_ai.cpp
src/career/: analytics_service.cpp  app_services.cpp  career_manager.cpp  career_modules.cpp  career_reports.cpp  career_runtime.cpp  career_service.cpp  career_state.cpp  career_support.cpp  dressing_room_service.cpp  game_events_system.cpp  gameplay_reports.cpp  inbox_service.cpp  manager_advice.cpp  match_analysis_store.cpp  match_center_service.cpp  medical_service.cpp  player_development.cpp  season_flow_controller.cpp  season_service.cpp  season_transition.cpp  staff_service.cpp  sub_services.cpp  team_management.cpp  transfer_briefing.cpp  week_simulation.cpp  weekly_focus_service.cpp  world_state_service.cpp
src/competition/: competition.cpp  league_registry.cpp
src/development/: monthly_development.cpp  player_progression_system.cpp  training_impact_system.cpp  youth_generation_system.cpp
src/engine/: career_state.cpp  debt_system.cpp  facilities_system.cpp  front_menu.cpp  game_controller.cpp  game_engine.cpp  game_settings.cpp  league_table.cpp  manager_stress.cpp  models.cpp  rival_ai.cpp  rivalry_system.cpp  social_system.cpp  team_personality.cpp  team_selection.cpp
src/finance/: finance_system.cpp
src/gui/: gui.cpp  gui_actions.cpp  gui_audio.cpp  gui_layout.cpp  gui_runtime.cpp  gui_shared.cpp  gui_team_logos.cpp  gui_view_common.cpp  gui_view_competition.cpp  gui_view_management.cpp  gui_view_menu.cpp  gui_view_overview.cpp  gui_views.cpp
src/io/: io.cpp  save_manager.cpp  save_serialization.cpp
tests/: project_tests.cpp
tools/: report_orphan_team_folders.ps1  sanitize_ligachilena_data.ps1
(+488 files in other folders)
